discussion/kv_engine/161819/161819_rev8_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-48506: Don't copy the expelledItems container around at expel

Just use a 'std::unique_ptr<CheckpointQueue>' and rely on the
unique_ptr move semantic.

Change-Id: Ia09ac19249a33995110fb63cc96a2c25b94f97fd

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2021-09-24 13:57:01.000000000
Message: 
Uploaded patch set 8.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-09-24 14:41:02.000000000
Message: 
Patch Set 8: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/34380/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/checkpoint_visitor.cc:35:5:
error: use of undeclared identifier "TRACE_EVENT0"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/34380/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40394/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [0031/0158]: test bloomfilters"s in a delete+set scenario...(173 ms) OK


99% tests passed, 1 tests failed out of 410

Total Test time (real) = 1193.08 sec

The following tests FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40394/ )

Timeout of a CTest test 410/410 Test #259: ep_testsuite.value_eviction.comp_passive ......................................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40394/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12829/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint.cc:530:5: error: use of undeclared identifier "TRACE_EVENT0" [clang-diagnostic-error]
    TRACE_EVENT0("wip", "C::expelItems");
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint.cc:555:9: error: use of undeclared identifier "TRACE_EVENT0" [clang-diagnostic-error]
        TRACE_EVENT0("wip", "C::expelItems::splice");
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint.cc:568:9: error: use of undeclared identifier "TRACE_EVENT0" [clang-diagnostic-error]
        TRACE_EVENT0("wip", "C::expelItems::open_and_mem");
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint.cc:592:9: error: use of undeclared identifier "TRACE_EVENT0" [clang-diagnostic-error]
        TRACE_EVENT0("wip", "C::expelItems::closed_or_disk");
        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12829/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint.cc:530:5:
error: use of undeclared identifier "TRACE_EVENT0" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12829/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/14700/ : FAILURE

Failure of GoogleTest "EphemeralOrPersistent/STExpiryPagerTest.MB_25671/persistent_magma_value_only":

<pre>
[ RUN      ] EphemeralOrPersistent/STExpiryPagerTest.MB_25671/persistent_magma_value_only
[2021-09-24T14:22:46.107Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:1682: Failure
[2021-09-24T14:22:46.107Z] Expected equality of these values:
[2021-09-24T14:22:46.107Z]   err
[2021-09-24T14:22:46.107Z]     Which is: would block
[2021-09-24T14:22:46.107Z]   store->getMetaData( key_1, vbid, cookie, metadata, deleted, datatype)
[2021-09-24T14:22:46.107Z]     Which is: no memory
[2021-09-24T14:22:46.107Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:1687: Failure
[2021-09-24T14:22:46.107Z] Expected equality of these values:
[2021-09-24T14:22:46.107Z]   cb::engine_errc::success
[2021-09-24T14:22:46.107Z]     Which is: success
[2021-09-24T14:22:46.107Z]   store->getMetaData( key_1, vbid, cookie, metadata, deleted, datatype)
[2021-09-24T14:22:46.107Z]     Which is: no memory
[2021-09-24T14:22:46.107Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:1715: Failure
[2021-09-24T14:22:46.107Z] Expected equality of these values:
[2021-09-24T14:22:46.107Z]   err
[2021-09-24T14:22:46.107Z]     Which is: would block
[2021-09-24T14:22:46.107Z]   deleteWithMeta()
[2021-09-24T14:22:46.107Z]     Which is: no memory
[2021-09-24T14:22:46.107Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:1721: Failure
[2021-09-24T14:22:46.107Z] Expected equality of these values:
[2021-09-24T14:22:46.107Z]   cb::engine_errc::success
[2021-09-24T14:22:46.107Z]     Which is: success
[2021-09-24T14:22:46.107Z]   deleteWithMeta()
[2021-09-24T14:22:46.107Z]     Which is: no memory
[2021-09-24T14:22:46.107Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:1725: Failure
[2021-09-24T14:22:46.107Z] Expected equality of these values:
[2021-09-24T14:22:46.107Z]   cb::engine_errc::success
[2021-09-24T14:22:46.107Z]     Which is: success
[2021-09-24T14:22:46.107Z]   item.getStatus()
[2021-09-24T14:22:46.107Z]     Which is: no memory
[2021-09-24T14:22:46.107Z] [  FAILED  ] EphemeralOrPersistent/STExpiryPagerTest.MB_25671/persistent_magma_value_only, where GetParam() = ("persistent_magma", "value_only") (56 ms)
EphemeralOrPersistent/STExpiryPagerTest.MB_25671/persistent_magma_value_only
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/14700/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/15227/ : FAILURE

ThreadSanitizer issue: lock-order-inversion (potential deadlock) (/opt/gcc-10.2.0/lib64/libtsan.so.0+0x50dfa) in __interceptor_pthread_mutex_lock  ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/15227/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/11619/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/13585/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/14439/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/22711/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2497/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/2463/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
